ongoing changes and fixes. mobile view is still not responsive

--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -2,21 +2,43 @@
 .hero-container{
     display: flex;
     justify-content: center;
-    /* background-image: url("../../../public/images/hero1.png"); */
+    background-image: url("../../background-image/hero-picture.png");
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */    height: 100vh;
+    width: 100%;
 }
 .hero-content {
-    width: 21rem;
-    height: 8rem;
+    width: 781px;
+    height: 222px;
     padding: 18px 33px 22px;
     background-color: rgba(255, 255, 255, 0.88);
     text-align: center;
+    margin: 0 auto;
+    font-size: 2rem;
+margin-top: 35vh;
 }
-.search-container-hero {
+
+.hero-text {
+    width: 60%;
+    margin-left: 20%
+    
+}
+.search-container-hero input{
     margin-top: 1vw;
+    width: 50%;
+    opacity: 0.53;
+  font-family: HelveticaNeue;
+  font-size: 1.2rem;
+  letter-spacing: 1.57px;
+  padding: 9px 73px 8px 20px;
+  border-radius: 4px;
+  border: solid 0.6px var(--black);
 }
 .input-text {
-    flex: 1;
+    /* flex: 1; */
     border: none;
     margin-left: 1vw;
+    
 
 }
